--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 #Ativando o Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/Cursos
+spring.datasource.url=jdbc:mysql://localhost:25437/Cursos
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=P@ssw0rd
+spring.datasource.password=Gc1G-dahCEH4fb5DbfHb-dCHfdb2a64c
  
  
 spring.jpa.database=mysql
