--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
-#Ativando o Mysql
-spring.datasource.url=jdbc:mysql://localhost:25437/Cursos
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Gc1G-dahCEH4fb5DbfHb-dCHfdb2a64c
- 
- 
+spring.datasource.password=P@ssword
+
+
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
